* Hide group Enterprise Domain Controllers as well (Bug #32871)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45130 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.22-3) unstable; urgency=low
+
+  * Hide group Enterprise Domain Controllers as well (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 15 Oct 2013 19:33:30 +0200
+
 univention-samba4 (3.0.22-2) unstable; urgency=low
 
   * Pass join credentials to udm command (Bug #32871)
