Bug #32634: switch color depth automatically from 788 (800x600x16) to 789 (800x600x24) during update to UCS 3.2-0
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45132 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,10 @@
+univention-grub (7.0.1-2) unstable; urgency=low
+
+  * Bug #32634: switch color depth automatically from 788 (800x600x16) to
+  	789 (800x600x24) during update to UCS 3.2-0
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 13 Oct 2013 21:28:43 +0200
+
 univention-grub (7.0.1-1) unstable; urgency=low
 
   * Bug #32634: updated univention-grub-generate-menu-lst for GRUB 2.00
