--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.22-4) unstable; urgency=low
+
+  * Hide group Enterprise Domain Controllers as well (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 15 Oct 2013 21:51:00 +0200
+
 univention-samba4 (3.0.22-3) unstable; urgency=low
 
   * Hide group Enterprise Domain Controllers as well (Bug #32871)
