* Provide a modprobe configuration file for vmwgfx (the DRM driver for vmware) to     enable fbdev support. Otherwise we have startup freezes in bootsplash and on     the command line (Bug #32536)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45142 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,11 @@
+univention-base-files (3.0.3-7) unstable; urgency=low
+
+  * Provide a modprobe configuration file for vmwgfx (the DRM driver for vmware) to
+    enable fbdev support. Otherwise we have startup freezes in bootsplash and on
+    the command line (Bug #32536)
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 16 Oct 2013 11:01:26 +0200
+
 univention-base-files (3.0.3-6) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
