--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.26-4) unstable; urgency=low
+
+  * Move the creation of Enterprise Domain Controllers to univention-
+    samba4 (Bug #32461)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 12:24:45 +0200
+
 univention-s4-connector (8.0.26-3) unstable; urgency=low
 
   * Adjust debug messages from last commit (Bug #32767)
