* Activate sysvol sync in 98univention-samba4-dns.inst (Bug #29662)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45158 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.24-1) unstable; urgency=low
+
+  * Activate sysvol sync in 98univention-samba4-dns.inst (Bug #29662)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 12:55:12 +0200
+
 univention-samba4 (3.0.23-2) unstable; urgency=low
 
   * Move the creation of Enterprise Domain Controllers to univention-
