--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.2-1) unstable; urgency=low
+
+  * added unjoin script for univention-nagios-server (Bug #32453)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 16 Oct 2013 12:40:04 +0200
+
 univention-nagios (7.0.1-6) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
