* Activate NFSv4 by default (Bug #21556) * Added support for custom NFS share settings by supporting univentionShareNFSCustomSetting in nfs-shares listener (Bug #18708)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45165 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-nfs/debian/changelog
+++ b/services/univention-nfs/debian/changelog
@@ -1,3 +1,11 @@
+univention-nfs (6.0.1-5) unstable; urgency=low
+
+  * Activate NFSv4 by default (Bug #21556) 
+  * Added support for custom NFS share settings by supporting
+    univentionShareNFSCustomSetting in nfs-shares listener (Bug #18708)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 16 Oct 2013 13:56:32 +0200
+
 univention-nfs (6.0.1-4) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
