* Added support for custom NFS share options (Bug #18708)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45166 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.15-2) unstable; urgency=low
+
+  * Added support for custom NFS share options (Bug #18708)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 16 Oct 2013 13:52:13 +0200
+
 univention-ldap (10.0.15-1) unstable; urgency=low
 
   * Move pseudo group creation from base.ldif to samba4 join script
