* Improved layout and texts (Bug #32882) * Added new syntax ipnetwork and list_of_hostnames_and_ipadresses_and_networks (Bug #32882) * NFS shares can now be restricted to networks (Bug #32882) * Custom settings can now be added to NFS shares (Bug #18708)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45167 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,13 @@
+univention-directory-manager-modules (9.0.62-2) unstable; urgency=low
+
+  * Improved layout and texts (Bug #32882)
+  * Added new syntax ipnetwork and 
+    list_of_hostnames_and_ipadresses_and_networks (Bug #32882)
+  * NFS shares can now be restricted to networks (Bug #32882)
+  * Custom settings can now be added to NFS shares (Bug #18708)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 16 Oct 2013 13:33:34 +0200
+
 univention-directory-manager-modules (9.0.62-1) unstable; urgency=low
 
   * added objectFlag (Bug #31408) 
