* Update/review UCR variable descriptions (Bug #30945)   * Update copyright for 2013
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45169 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,10 @@
+univention-mail-postfix (8.0.5-2) unstable; urgency=low
+
+  * Update/review UCR variable descriptions (Bug #30945)
+  * Update copyright for 2013
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 16 Oct 2013 14:48:30 +0200
+
 univention-mail-postfix (8.0.5-1) unstable; urgency=low
 
   * added unjoin script for univention-mail-server (Bug #32454)
