modified unjoin scripts (Bug #32453, Bug #32454)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45171 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.6-1) unstable; urgency=low
+
+  * adapted univention-mail-server unjoin script (Bug #32454)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 16 Oct 2013 14:50:24 +0200
+
 univention-mail-postfix (8.0.5-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
