fixed univention-apache.postinst (Bug #32647
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45175 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.10-2) unstable; urgency=low
+
+  * fixed univention-apache.postinst (Bug #32647)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 16 Oct 2013 16:07:09 +0200
+
 univention-apache (6.0.10-1) unstable; urgency=low
 
   * Bug #32838: adapt ucs-overview for displaying a warning if javascript is
