--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.27-1) unstable; urgency=low
+
+  * fixed device guessing in 67_bootloader.py (Bug #32632) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 16 Oct 2013 16:10:39 +0200
+
 univention-installer (9.0.26-1) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
