* Bug #32565: Revert all changes so far, too complicated. Just avoid the situation in other packages
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45195 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.63-1) unstable; urgency=low
+
+  * Bug #32565: Revert all changes so far, too complicated. Just avoid the
+    situation in other packages
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 16 Oct 2013 19:00:13 +0200
+
 univention-directory-manager-modules (9.0.62-2) unstable; urgency=low
 
   * Improved layout and texts (Bug #32882)
