--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.143-1) unstable; urgency=low
+
+  * New testcase for Bug #31305
+
+ -- Arvid Requate <requate@univention.de>  Wed, 16 Oct 2013 19:04:29 +0200
+
 ucs-test (4.0.142-1) unstable; urgency=low
 
   * Fix timing issue in 10_ldap/74schema_update (Bug #26785)
