--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.25-1) unstable; urgency=low
+
+  * Create foreignSecurityPrincipal in join script (Bug #29000)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 20:14:45 +0200
+
 univention-samba4 (3.0.24-1) unstable; urgency=low
 
   * Activate sysvol sync in 98univention-samba4-dns.inst (Bug #29662)
