--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.144-1) unstable; urgency=low
+
+  * 51_samba4/31well-known-security-principals: Added a test case to
+    check if all foreignSecurityPrincipal exist in OpenLDAP (Bug #29000)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 21:08:25 +0200
+
 ucs-test (4.0.143-1) unstable; urgency=low
 
   * New testcase for Bug #31305
