* Rename connector/s4/mapping/group/synclocal to   connector/s4/mapping/group/grouptype (Bug #32767)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45210 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.144-2) unstable; urgency=low
+
+  * Rename connector/s4/mapping/group/synclocal to
+    connector/s4/mapping/group/grouptype (Bug #32767)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 21:33:56 +0200
+
 ucs-test (4.0.144-1) unstable; urgency=low
 
   * 51_samba4/31well-known-security-principals: Added a test case to
