* Ignore foreignSecurityPrincipals (Bug #29000)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45212 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.26-6) unstable; urgency=low
+
+  * Ignore foreignSecurityPrincipals (Bug #29000)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 21:45:56 +0200
+
 univention-s4-connector (8.0.26-5) unstable; urgency=low
 
   * Rename connector/s4/mapping/group/synclocal to
