* Really wait five minutes before dns-* was created (Bug #32871) * Use the correct container for the pseudo groups (Bug #29000)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45213 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,6 +1,12 @@
+univention-samba4 (3.0.25-3) unstable; urgency=low
+
+  * Really wait five minutes before dns-* was created (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 23:57:47 +0200
+
 univention-samba4 (3.0.25-2) unstable; urgency=low
 
-  * Use the correct container for the pseudo groups (Bug #29000)"
+  * Use the correct container for the pseudo groups (Bug #29000)
 
  -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Oct 2013 20:49:19 +0200
 
