* Synchronize the groupType (Bug #32768)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45214 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.7-1) unstable; urgency=low
+
+  * Synchronize the groupType (Bug #32768)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 17 Oct 2013 00:04:48 +0200
+
 univention-ad-connector (8.0.6-2) unstable; urgency=low
 
   * Bug #32698: add XS-Python-Version to control file
