--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.11-1) unstable; urgency=low
+
+  * Bug #32613: adjust links in footer of ucs overview
+
+ -- Florian Best <best@univention.de>  Thu, 17 Oct 2013 09:56:44 +0200
+
 univention-apache (6.0.10-2) unstable; urgency=low
 
   * fixed univention-apache.postinst (Bug #32647)
