--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,12 @@
+univention-mail-postfix (8.0.6-2) unstable; urgency=low
+
+  * Update/review UCR variable descriptions (Bug #30945)
+    Remove description for mail/default/domains, confusing for the user since it's
+    only read during run of the join script, users should rather add/remove domains
+    in the UMC
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Thu, 17 Oct 2013 10:56:56 +0200
+
 univention-mail-postfix (8.0.6-1) unstable; urgency=low
 
   * adapted univention-mail-server unjoin script (Bug #32454)
