* Cleanup test for Bug #31305
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45227 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.145-1) unstable; urgency=low
+
+  * Cleanup test for Bug #31305
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 11:15:32 +0200
+
 ucs-test (4.0.144-3) unstable; urgency=low
 
   * 55_adconnector/010_sync_group_type: test groupType synchronization
