Bug #32698: fix download link to private.key and cert.pem
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45236 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/umc/js/de.po
+++ b/services/univention-ad-connector/umc/js/de.po
@@ -279,3 +279,6 @@ msgstr "UCS Active Directory Connector Dienst"
 msgid "UCS Active Directory Connector supports three types of synchronisation."
 msgstr ""
 "UCS Active Directory Connector unterstützt drei Typen der Synchronisation."
+
+msgid "Download %s"
+msgstr "%s herunterladen"
