--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.8-1) unstable; urgency=low
+
+  * Bug #32698: fix download link to private.key and cert.pem
+
+ -- Florian Best <best@univention.de>  Thu, 17 Oct 2013 13:17:55 +0200
+
 univention-ad-connector (8.0.7-1) unstable; urgency=low
 
   * Synchronize the groupType (Bug #32768)
