* Bug #30811: evaluate startup wizard input, add license activation dialogue
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45245 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.106-1) unstable; urgency=low
+
+  * Bug #30811: evaluate startup wizard input, add license activation dialogue
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 17 Oct 2013 14:43:12 +0200
+
 univention-management-console-frontend (3.0.105-1) unstable; urgency=low
 
   * Bug #26418: remove multiActionsAlwaysActive property from grid, simplify
