* Bug #23214: Render wizard as popup over search grid * Bug #32565: Revert changes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45252 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.47-1) unstable; urgency=low
+
+  * Bug #23214: Render wizard as popup over search grid
+  * Bug #32565: Revert changes
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 17 Oct 2013 15:34:51 +0200
+
 univention-management-console-module-udm (4.0.46-1) unstable; urgency=low
 
   * Bug #32877: re-enable module options
