--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.27-2) unstable; urgency=low
+
+  * Make create_spn_account.sh add the saltPrincipal attribute
+    (Bug #32291)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 15:47:23 +0200
+
 univention-samba4 (3.0.27-1) unstable; urgency=low
 
   * set samba/max_open_files?32808 like in univention-samba
