* Always log filename for rejects (Bug #32262)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45257 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.27-1) unstable; urgency=low
+
+  * Always log filename for rejects (Bug #32262)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 15:55:06 +0200
+
 univention-s4-connector (8.0.26-6) unstable; urgency=low
 
   * Ignore foreignSecurityPrincipals (Bug #29000)
