* Adjust udm-extension tests (Bug #32554)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45259 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.145-3) unstable; urgency=low
+
+  * Adjust udm-extension tests (Bug #32554)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 16:02:50 +0200
+
 ucs-test (4.0.145-2) unstable; urgency=low
 
   * Fix 50_samba/30winbind in samba4 domains (Bug #31772)
