* Adjust spelling of samba/max_openfiles (Bug #32049 * Adjust debian packaging files to standard naming convention
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45262 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (8.0.12-1) unstable; urgency=low
+
+  * Adjust spelling of samba/max_openfiles (Bug #32049
+  * Adjust debian packaging files to standard naming convention
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 16:36:27 +0200
+
 univention-samba (8.0.11-1) unstable; urgency=low
 
   * With the new samba version the secrets.tdb path has been moved to
