--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.12-2) unstable; urgency=low
+
+  * Fix problem detected by ucs-lint (Bug #32049)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 16:43:19 +0200
+
 univention-samba (8.0.12-1) unstable; urgency=low
 
   * Adjust spelling of samba/max_openfiles (Bug #32049)
