* init.d/slapd: tempfile, boolean (Bug #31989)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45265 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-1) unstable; urgency=low
+
+  * init.d/slapd: tempfile, boolean (Bug #31989)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 16:46:33 +0200
+
 univention-ldap (10.0.16-3) unstable; urgency=low
 
   * Fixed syntax errors in ACL config (Bug #31305)
