* Bug #32389: adapt license dialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45269 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/de.po
+++ b/management/univention-management-console-module-udm/umc/js/de.po
@@ -407,8 +407,12 @@ msgid "License text"
 msgstr "Lizenztext"
 
 #: umc/js/udm/LicenseDialog.js:93
-msgid "License upload"
-msgstr "Lizenz hochladen"
+msgid "License file upload"
+msgstr "Lizenzdatei hochladen"
+
+#: umc/js/udm/LicenseDialog.js:93
+msgid "Information about the \"free for personal use\" license"
+msgstr "Informationen über die \"Free For Personal Use\"-Lizenz"
 
 #: umc/js/udm.js:1493
 msgid "Linux"
