--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.48-1) unstable; urgency=low
+
+  * Bug #32389: adapt license dialog
+
+ -- Florian Best <best@univention.de>  Thu, 17 Oct 2013 16:56:44 +0200
+
 univention-management-console-module-udm (4.0.47-1) unstable; urgency=low
 
   * Bug #23214: Render wizard as popup over search grid
