* Add missing include in setup-s4.sh (Bug #31106)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45270 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.27-5) unstable; urgency=low
+
+  * Add missing include in setup-s4.sh (Bug #31106)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 17:00:59 +0200
+
 univention-samba4 (3.0.27-4) unstable; urgency=low
 
   * Adjust spelling of samba/max_openfiles (Bug #32049)
